LPS-146909 Add languages keys to objects view default sort

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Qualsevol persona
 default-settings-for-all-instances=Configuració per defecte per a totes les instàncies
 default-shipping=Enviament predeterminat
 default-site-roles-assignment-help=Seleccioneu els rols que tindran els membres nous del lloc.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Grup d'especificació per defecte
 default-style-book=Llibre d'estils per defecte
 default-tab=Pestanya per defecte
@@ -5314,6 +5315,7 @@ edit-controls=Controls d'edició
 edit-conversion-draft=Edita l'esborrany de la conversió
 edit-coupon=Edita el cupó
 edit-current-assignee=Edita l'assignat actual
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Utilitza els valors per defecte
 edit-description=Editeu la descripció
 edit-discount-rule=Edita la regla de descompte
@@ -9741,6 +9743,7 @@ new-custom-field=Un camp personalitzat nou
 new-custom-object=Nou objecte personalitzat
 new-data-export=Nova exportació de dades
 new-data-source=Font de les dades nova
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Definició nova
 new-device-family=Nova família de dispositius
 new-digital-signature-envelope=Nou sobre de signatura digital
@@ -9928,6 +9931,7 @@ no-data-migration-processes-are-available=No està disponible cap procés per a 
 no-data-providers-were-found=No s'ha trobat cap proveïdor de dades.
 no-declined-invites=Cap invitació rebutjada.
 no-default-display-page-template=No hi ha cap plantilla de pàgina de visualització per defecte
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=No s'ha trobat cap definició.
 no-delivery-terms=Sense condicions de lliurament
 no-description=No hi ha cap descripció
@@ -14052,6 +14056,7 @@ sort-display-context-help=Accediu a les dades que conté l'objecte SortDisplayCo
 sort-portlet-instance-configuration-name=Ordena
 sort-structures-by-name=Ordena les estructures per nom
 sort-structures-by-name-help=Establiu això en cert per mostrar les estructures ordenades per nom ascendent quan s'afegeixi un contingut web. Si no, les estructures s'ordenaran per identificador. Habilitar aquesta propietat pot fer disminuir el rendiment depenent del nombre d'estructures ddm existents, ja que l'ordenació es fa a la memòria.
+sorting=Sorting (Automatic Copy)
 sound-settings=Configuració del so
 source=Origen
 source-address=Adreça d'origen
@@ -14193,6 +14198,7 @@ star-off=Estrella desactivada
 stars=Estrelles
 start=Inici
 start-a-new-workflow=Inicia un flux de treball nou
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Data d'inici
 start-free-trial=Inicia la prova gratuïta
 start-from=Inicia des de
@@ -14971,6 +14977,7 @@ the-google-client-id-is-invalid=Si us plau, entreu una ID de client Google vàli
 the-google-client-secret-is-invalid=Si us plau, introduïu un compte de secret del client de Google.
 the-google-places-api-key-is-not-set=La clau d'API de Google Places no està establerta.
 the-header-search-bar-configuration-takes-precedence=Per als camps desactivats, la configuració de la barra de cerca de la capçalera de la pàgina té preferència.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=L'ID es basa en el camp del nom.
 the-id-you-entered-is-reserved-x=L'ID que heu introduït està reservat: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=El rol de proveïdor d'identitats s'ha deshabilitat. Es pot tornar a habilitar a Configuració del sistema.
@@ -15452,6 +15459,7 @@ there-are-no-collection-providers=No hi ha proveïdors de col·leccions.
 there-are-no-collection-usages=No hi ha usos de la col·lecció.
 there-are-no-collections=No hi ha col·leccions.
 there-are-no-collections-yet=Encara no hi ha cap col·lecció.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Encara no hi ha cap comentari.
 there-are-no-compatible-object-fields-to-map=No hi ha cap camp d'objecte compatible per mapar.
 there-are-no-completed-instances=No hi ha cap petició de publicació completada.
