--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -4621,6 +4621,7 @@ default-segment-name=kdokoliv (Automatic Translation)
 default-settings-for-all-instances=Výchozí nastavení pro všechny instance (Automatic Translation)
 default-shipping=Výchozí doprava (Automatic Translation)
 default-site-roles-assignment-help=Vyberte role, které budou přiřazeny novým členům webu.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Výchozí skupina specifikací (Automatic Translation)
 default-style-book=Výchozí kniha stylů (Automatic Translation)
 default-tab=Výchozí záložka
@@ -5314,6 +5315,7 @@ edit-controls=Upravit ovládací prvky
 edit-conversion-draft=Upravit koncept převodu (Automatic Translation)
 edit-coupon=Upravit kupón
 edit-current-assignee=Upravit aktuálního přiřaditelného (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Upravit výchozí hodnoty
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Upravit pravidlo slevy (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Nové uživatelské pole
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Export nových dat (Automatic Translation)
 new-data-source=Nový zdroj dat (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nová definice (Automatic Translation)
 new-device-family=Přidat skupinu zařízení
 new-digital-signature-envelope=Nová obálka digitálního podpisu (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Není k dispozici žádný proces pro 
 no-data-providers-were-found=Nebyli nalezeni žádní zprostředkovatelé dat. (Automatic Translation)
 no-declined-invites=Žádné odmítnuté pozvánky.
 no-default-display-page-template=Žádná výchozí šablona stránky zobrazení (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Nebyly nalezeny žádné definice.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Přístup k datům obsaženým v objektu SortDisplayCo
 sort-portlet-instance-configuration-name=třídit (Automatic Translation)
 sort-structures-by-name=Seřadit struktury podle názvu (Automatic Translation)
 sort-structures-by-name-help=Nastavte tuto hodnotu na hodnotu true, aby se při přidávání webového obsahu zobrazovaly struktury seřazené podle vzestupného názvu. V opačném případě budou struktury seřazeny podle identifikátoru. Povolení této vlastnosti může snížit výkon v závislosti na počtu existujících ddmStructures, protože řazení se provádí v paměti. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Nastavení zvuku
 source=Zdroj
 source-address=Adresa zdroje
@@ -14191,6 +14196,7 @@ star-off=Zrušit hodnocení
 stars=Hodnocení
 start=Počátek
 start-a-new-workflow=Začít nové workflow
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Datum počátku
 start-free-trial=Spustit bezplatnou zkušební verzi (Automatic Translation)
 start-from=Počátek od
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Zadejte platné ID klienta Google. (Automatic Tr
 the-google-client-secret-is-invalid=Zadejte platný tajný klíč klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=U zakázaných polí má přednost konfigurace vyhledávacího panelu záhlaví stránky. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID je založeno na poli názvu. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Role zprostředkovatele identity byla zakázána. Lze jej znovu povolit v nastavení systému. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Neexistují žádní zprostředkovatelé kolek
 there-are-no-collection-usages=Neexistují žádná využití kolekce. (Automatic Translation)
 there-are-no-collections=Nejsou žádné sbírky. (Automatic Translation)
 there-are-no-collections-yet=Zatím nejsou žádné sbírky. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Zatím nejsou žádné komentáře. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Nebyly nalezeny žádné dokončené publikace.
