--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -4621,6 +4621,7 @@ default-segment-name=nogen (Automatic Translation)
 default-settings-for-all-instances=Standardindstillinger for alle forekomster (Automatic Translation)
 default-shipping=Standardlevering (Automatic Translation)
 default-site-roles-assignment-help=Vælg de roller, som de nyligt tildelte webstedsmedlemmer skal have. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Standardspecifikationsgruppe (Automatic Translation)
 default-style-book=Default Style Book (Automatic Copy)
 default-tab=Standard fane
@@ -5314,6 +5315,7 @@ edit-controls=Redigeringselementer
 edit-conversion-draft=Rediger konverteringskonverteringskonvertering (Automatic Translation)
 edit-coupon=Rediger Coupon
 edit-current-assignee=Rediger aktuel modtager (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Rediger standardværdier
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Rediger rabatregel (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Ny Custom Field
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Ny dataeksport (Automatic Translation)
 new-data-source=Ny datakilde (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Ny definition (Automatic Translation)
 new-device-family=Tilføj regelgruppe
 new-digital-signature-envelope=Ny konvolut til digital signatur (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Der er ingen tilgængelige dataoverfø
 no-data-providers-were-found=Der blev ikke fundet nogen dataprovidere. (Automatic Translation)
 no-declined-invites=Ingen afviste invitationer. (Automatic Translation)
 no-default-display-page-template=Skabelonen Ingen standardvisningsside (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=No definitions were found. (Automatic Copy)
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Få adgang til dataene i objektet SortDisplayContext (
 sort-portlet-instance-configuration-name=slags (Automatic Translation)
 sort-structures-by-name=Sorter strukturer efter navn (Automatic Translation)
 sort-structures-by-name-help=Angiv dette til sand for at få vist strukturer sorteret efter stigende navn, når der tilføjes et webindhold. Ellers sorteres strukturer efter id. Aktivering af denne egenskab kan forringe ydeevnen afhængigt af antallet af eksisterende ddmStructures, da sortering udføres i hukommelsen. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Lydindstillinger
 source=Source (Automatic Copy)
 source-address=Source Address (Automatic Copy)
@@ -14191,6 +14196,7 @@ star-off=Star Off (Automatic Copy)
 stars=Stars (Automatic Copy)
 start=Start (Automatic Copy)
 start-a-new-workflow=Start a New Workflow (Automatic Copy)
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Start Date (Automatic Copy)
 start-free-trial=Start gratis prøveperiode (Automatic Translation)
 start-from=Start From (Automatic Copy)
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Angiv et gyldigt Google-klient-id. (Automatic Tr
 the-google-client-secret-is-invalid=Angiv en gyldig Google-klienthemmelighed. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=I forbindelse med deaktiverede felter har konfigurationen af sidehovedets søgefelt forrang. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Id'et er baseret på navnefeltet. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identitetsproviderrollen er deaktiveret. Den kan aktiveres igen i Systemindstillinger. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Der er ingen inkassoudbydere. (Automatic Trans
 there-are-no-collection-usages=Der er ingen brug af kollektioner. (Automatic Translation)
 there-are-no-collections=Der er ingen samlinger. (Automatic Translation)
 there-are-no-collections-yet=Der er endnu ingen samlinger. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Der er ingen kommentarer endnu. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Der er ingen afsluttede publiceringsanmodninger.
