--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Jeder
 default-settings-for-all-instances=Standardeinstellungen für alle Instanzen
 default-shipping=Standard-Versand
 default-site-roles-assignment-help=Die neu hinzugefügten Sitemitgliedern standardmäßig zugewiesenen Rollen auswählen.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Standard-Spezifikationsgruppe
 default-style-book=Standard-Style Book
 default-tab=Standardreiter
@@ -5314,6 +5315,7 @@ edit-controls=Bedienelemente zur Bearbeitung
 edit-conversion-draft=Konvertierungsentwurf bearbeiten
 edit-coupon=Gutschein bearbeiten
 edit-current-assignee=Aktuell zugewiesenen Benutzer bearbeiten
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Standardwerte bearbeiten
 edit-description=Beschreibung bearbeiten
 edit-discount-rule=Rabatt-Regel bearbeiten
@@ -9741,6 +9743,7 @@ new-custom-field=Neues benutzerdefiniertes Feld
 new-custom-object=Neues benutzerdefiniertes Objekt
 new-data-export=Neuer Datenexport
 new-data-source=Neue Datenquelle
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Neue Definition
 new-device-family=Neue Endgeräteklasse
 new-digital-signature-envelope=Neuer Envelope für digitale Signatur
@@ -9928,6 +9931,7 @@ no-data-migration-processes-are-available=Es sind keine Datenmigrationsprozesse 
 no-data-providers-were-found=Keine Datenanbieter wurden gefunden.
 no-declined-invites=Keine abgelehnten Einladungen.
 no-default-display-page-template=Keine Standardvorlage für die Anzeigenseite vorhanden
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Keine Definitionen wurden gefunden.
 no-delivery-terms=Keine Zustellungsbedingungen
 no-description=Keine Beschreibung
@@ -14052,6 +14056,7 @@ sort-display-context-help=Zugriff auf Daten, die im Objekt SortDisplayContext en
 sort-portlet-instance-configuration-name=Sortieren
 sort-structures-by-name=Strukturen nach Namen sortieren
 sort-structures-by-name-help=Aktivieren Sie diese Einstellung, um beim Hinzufügen von Webcontent Strukturen nach Namen in absteigender Reihenfolge anzuzeigen. Sonst werden Strukturen nach dem Bezeichner sortiert. Das Aktivieren dieser Eigenschaft kann abhängig von der Anzahl der existierenden ddm-Strukturen die Leistung verringern, da das Sortieren im Speicher stattfindet.
+sorting=Sorting (Automatic Copy)
 sound-settings=Toneinstellung
 source=Quelle
 source-address=Quelladresse
@@ -14193,6 +14198,7 @@ star-off=Stern weg
 stars=Sterne
 start=Anfang
 start-a-new-workflow=Einen neuen Workflow beginnen
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Anfangsdatum
 start-free-trial=Kostenlose Testversion starten
 start-from=Angefangen von
@@ -14971,6 +14977,7 @@ the-google-client-id-is-invalid=Bitte geben Sie eine gültige Google Client-ID a
 the-google-client-secret-is-invalid=Bitte geben Sie ein gültiges Google Client-Secret an.
 the-google-places-api-key-is-not-set=Der Google Places API-Schlüssel wurde nicht festgelegt.
 the-header-search-bar-configuration-takes-precedence=Bei deaktivierten Feldern hat die Konfiguration der Suchleiste in der Kopfzeile Vorrang.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Die ID basiert auf dem Namensfeld.
 the-id-you-entered-is-reserved-x=Die von Ihnen eingegebene ID ist reserviert: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Die Rolle Identity-Provider wurde deaktiviert. Sie kann in den Systemeinstellungen erneut aktiviert werden.
@@ -15452,6 +15459,7 @@ there-are-no-collection-providers=Es gibt keine Anbieter von Sammlungen.
 there-are-no-collection-usages=Sammlungen werden nicht verwendet.
 there-are-no-collections=Es gibt keine Sammlungen.
 there-are-no-collections-yet=Es gibt noch keine Sammlungen.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Es gibt noch keine Kommentare.
 there-are-no-compatible-object-fields-to-map=Es gibt keine kompatiblen Objektfelder, die zugeordnet werden können.
 there-are-no-completed-instances=Keine abgeschlossenen Veröffentlichungsvorgänge gefunden.
