--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Cualquier persona
 default-settings-for-all-instances=Configuración por defecto para todas las instancias
 default-shipping=Envío predeterminado
 default-site-roles-assignment-help=Selecciona los roles que tendrán los nuevos miembros asignados al sitio.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Grupo de especificaciones por defecto
 default-style-book=Libro de estilo por defecto
 default-tab=Pestaña por defecto
@@ -5314,6 +5315,7 @@ edit-controls=Editar controles
 edit-conversion-draft=Editar borrador de conversión
 edit-coupon=Editar el cupón
 edit-current-assignee=Editar usuario asignado actualmente
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Editar los valores por defecto
 edit-description=Editar descripción
 edit-discount-rule=Editar regla de descuento
@@ -9741,6 +9743,7 @@ new-custom-field=Añadir campo personalizado
 new-custom-object=Nuevo objeto personalizado
 new-data-export=Nueva exportación de datos
 new-data-source=Nuevo origen de datos
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nueva definición
 new-device-family=Añadir familia de dispositivos
 new-digital-signature-envelope=Nuevo sobre de firma digital
@@ -9928,6 +9931,7 @@ no-data-migration-processes-are-available=No hay disponible ningún proceso para
 no-data-providers-were-found=No se ha encontrado ningún proveedor de datos.
 no-declined-invites=No hay invitaciones declinadas.
 no-default-display-page-template=No hay ninguna plantilla de página de visualización por defecto
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=No se ha encontrado ninguna definición.
 no-delivery-terms=No hay condiciones de entrega
 no-description=Sin descripción
@@ -14052,6 +14056,7 @@ sort-display-context-help=Permite acceder a los datos del objeto SortDisplayCont
 sort-portlet-instance-configuration-name=Ordenar
 sort-structures-by-name=Ordenar estructuras por nombre
 sort-structures-by-name-help=Establezca esta opción en verdadero para mostrar las estructuras ordenadas por nombre ascendente al añadir un contenido web. De lo contrario, las estructuras se ordenarán por el identificador. Habilitar esta propiedad puede afectar al rendimiento, según el número de elementos ddmStructures existentes, ya que la ordenación se realiza en memoria.
+sorting=Sorting (Automatic Copy)
 sound-settings=Configuración de sonidos
 source=Origen
 source-address=Dirección del origen
@@ -14193,6 +14198,7 @@ star-off=Quitar estrella
 stars=Estrellas
 start=Comienzo
 start-a-new-workflow=Comenzar un workflow nuevo
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Fecha de inicio
 start-free-trial=Iniciar prueba gratuita
 start-from=Empezar desde
@@ -14971,6 +14977,7 @@ the-google-client-id-is-invalid=Por favor introduzca un identificador del client
 the-google-client-secret-is-invalid=Por favor, introduzca un secreto del cliente de Google válido.
 the-google-places-api-key-is-not-set=No se ha establecido la clave de API de Google Places.
 the-header-search-bar-configuration-takes-precedence=Para los campos deshabilitados, la configuración de la barra de búsqueda del encabezado de página tiene prioridad.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=El identificador está basado en el campo nombre.
 the-id-you-entered-is-reserved-x=El identificador que ha especificado está reservado: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Se ha deshabilitado el rol de proveedor de identidades. Puede volver a habilitarlo en la configuración del sistema.
@@ -15452,6 +15459,7 @@ there-are-no-collection-providers=No hay proveedores de colecciones.
 there-are-no-collection-usages=No hay usos de la colección.
 there-are-no-collections=No hay ninguna colección.
 there-are-no-collections-yet=Aún no hay ninguna colección.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Aún no hay comentarios.
 there-are-no-compatible-object-fields-to-map=No hay campos de objeto compatibles que puedan asignarse.
 there-are-no-completed-instances=No hay peticiones de publicación terminadas.
