--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -4621,6 +4621,7 @@ default-segment-name=keegi (Automatic Translation)
 default-settings-for-all-instances=Kõigi eksemplaride vaikesätted (Automatic Translation)
 default-shipping=Vaikimisi saatmine (Automatic Translation)
 default-site-roles-assignment-help=Saate valida äsja määratud saidiliikmete rollid. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Spetsifikatsiooni vaikerühm (Automatic Translation)
 default-style-book=Vaikelaadiraamat (Automatic Translation)
 default-tab=Vaikimisi tab
@@ -5314,6 +5315,7 @@ edit-controls=Juhtelementide redigeerimine (Automatic Translation)
 edit-conversion-draft=Teisendusmustande redigeerimine (Automatic Translation)
 edit-coupon=Muuda kupongi
 edit-current-assignee=Redigeeri praegust määrajat (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Kasuta vaikeväärtuseid
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Allahindlusreegli redigeerimine (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Lisa kohandatud atribuut
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Uus andmete eksport (Automatic Translation)
 new-data-source=Uus andmeallikas (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Uus määratlus (Automatic Translation)
 new-device-family=Uus seadmeperekond (Automatic Translation)
 new-digital-signature-envelope=Uus digitaalallkirja ümbrik (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Ühtegi andmemigratsiooni protsessi ei
 no-data-providers-were-found=Andmepakkujaid ei leitud. (Automatic Translation)
 no-declined-invites=Tagasilükatud kutseid pole. (Automatic Translation)
 no-default-display-page-template=Vaikekuvalehe mall puudub (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Ühtegi definitsiooni ei leitud.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Pääsete juurde objektis SortDisplayContext sisalduva
 sort-portlet-instance-configuration-name=Sortida (Automatic Translation)
 sort-structures-by-name=Struktuuride sortimine nime järgi (Automatic Translation)
 sort-structures-by-name-help=Seadke see tõeseks, et kuvada veebisisu lisamisel tõusva nime järgi sorditud struktuurid. Vastasel juhul sorditakse struktuurid identifikaatori järgi. Selle atribuudi lubamine võib halvendada jõudlust sõltuvalt olemasolevate ddmStructures arvust, kuna sortimine toimub mälus. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Hääleseaded
 source=Allikas
 source-address=Lähteaadress
@@ -14191,6 +14196,7 @@ star-off=Hinne maha
 stars=Hinded
 start=Algus
 start-a-new-workflow=Alusta uut töövoogu
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Alguskuupäev
 start-free-trial=Alusta tasuta prooviperioodi (Automatic Translation)
 start-from=Algus
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Sisestage kehtiv Google'i kliendi ID. (Automatic
 the-google-client-secret-is-invalid=Sisestage kehtiv Google'i kliendi saladus. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Keelatud väljade puhul on ülimuslik lehepäise otsinguriba konfiguratsioon. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID põhineb nimeväljal. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identiteedipakkuja roll on keelatud. Seda saab süsteemisätetes uuesti lubada. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Kogumise pakkujaid pole. (Automatic Translatio
 there-are-no-collection-usages=Kollektsiooni kasutusi pole. (Automatic Translation)
 there-are-no-collections=Kollektsioone pole. (Automatic Translation)
 there-are-no-collections-yet=Kollektsioone pole veel. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Kommentaare veel ei ole. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Lõpuleviidud avaldamistaotlusi pole. (Automatic Translation)
