--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Anyone (Automatic Copy)
 default-settings-for-all-instances=Default Settings for All Instances (Automatic Copy)
 default-shipping=Default Shipping (Automatic Copy)
 default-site-roles-assignment-help=Aukeratu berriki esleitutako guneko kideek eukiko dituzten rolak.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Default Specification Group (Automatic Copy)
 default-style-book=Default Style Book (Automatic Copy)
 default-tab=Tabulazio lehenetsia
@@ -5314,6 +5315,7 @@ edit-controls=Kontrolak Editatu
 edit-conversion-draft=Edit Conversion Draft (Automatic Copy)
 edit-coupon=Editatu kupoia
 edit-current-assignee=Edit Current Assignee (Automatic Copy)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Balio Lehenetsiak Editatu
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Edit Discount Rule (Automatic Copy)
@@ -9739,6 +9741,7 @@ new-custom-field=Eremu pertsonalizatu berria
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=New Data Export (Automatic Copy)
 new-data-source=New Data Source (Automatic Copy)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=New Definition (Automatic Copy)
 new-device-family=Gehitu Arau Multzoa
 new-digital-signature-envelope=New Digital Signature Envelope (Automatic Copy)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Ez dago data migrazio prozesu erabilga
 no-data-providers-were-found=Ez da datu-hornitzailerik aurkitu.
 no-declined-invites=Gaitzetsi gabeko gonbidapenak.
 no-default-display-page-template=Ez dago bistaratze orri lehenetsirik
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Ez da definiziorik aurkitu.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Access the data contained in the SortDisplayContext ob
 sort-portlet-instance-configuration-name=Sort (Automatic Copy)
 sort-structures-by-name=Sort Structures by Name (Automatic Copy)
 sort-structures-by-name-help=Set this to true to show structures sorted by ascending name when adding a web content. Otherwise, structures will be sorted by identifier. Enabling this property can degrade performance depending on number of existing ddmStructures since sorting is done in memory. (Automatic Copy)
+sorting=Sorting (Automatic Copy)
 sound-settings=Soinu konfigurazioa
 source=Iturburua
 source-address=Helbide iturburua
@@ -14191,6 +14196,7 @@ star-off=Izar itzalia
 stars=Izarrak
 start=Hasiera
 start-a-new-workflow=Hasi workflow berri bat
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Hasiera data
 start-free-trial=Start Free Trial (Automatic Copy)
 start-from=Hasi hemendik
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Please enter a valid Google client ID. (Automati
 the-google-client-secret-is-invalid=Please enter a valid Google client secret. (Automatic Copy)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For disabled fields, the page header Search Bar configuration takes precedence. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=The ID is based on the name field. (Automatic Copy)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=The identity provider role has been disabled. It can be re-enabled in System Settings. (Automatic Copy)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Ez dago bilduma hornitzailerik.
 there-are-no-collection-usages=Ez da bildumarik erabili.
 there-are-no-collections=Ez dago bildumarik.
 there-are-no-collections-yet=Oraindik ez dago bildumarik.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=There are no comments yet. (Automatic Copy)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Ez daude bukatutako eskaerak.
