--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Kenelle tahansa
 default-settings-for-all-instances=Vakioasetukset kaikille portaali-ilmentymille.
 default-shipping=Oletustoimitus
 default-site-roles-assignment-help=Valitse roolit, jotka annetaan uusille sivuston jäsenille.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Oletus-Määritysryhmä
 default-style-book=Oletus-tyylikirja
 default-tab=Oletus tabi
@@ -5314,6 +5315,7 @@ edit-controls=Näytä hallintapainikkeet
 edit-conversion-draft=Muokkaa Keskustelun Luonnosta
 edit-coupon=Muokkaa kuponkia
 edit-current-assignee=Muokka Nykyistä Vastuuhenkilöä
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Muokkaa oletusarvoja
 edit-description=Muokkaa kuvausta
 edit-discount-rule=Muokkaa Alennussääntöä
@@ -9739,6 +9741,7 @@ new-custom-field=Lisää attribuutti
 new-custom-object=Uusi Mukautettu Objekti
 new-data-export=Uusi Tietojen Vienti
 new-data-source=Uusi Tietolähde
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Uusi Määritelmä
 new-device-family=Lisää uusi laiteryhmä
 new-digital-signature-envelope=Uusi digitaalinen allekirjoituskirjekuori
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Tieodon tuonti prosessia ei ole saatav
 no-data-providers-were-found=Tietolähteitä ei ole määritelty.
 no-declined-invites=Ei hylättyjä kutsuja.
 no-default-display-page-template=Ei Oletus-Näyttösivumallia
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Yhtään määrittelyä ei löytynyt.
 no-delivery-terms=Ei toimitusehtoja
 no-description=Ei kuvausta
@@ -14049,6 +14053,7 @@ sort-display-context-help=Käytä tietoja, jotka sisältyvät SortDisplayContext
 sort-portlet-instance-configuration-name=Lajittele
 sort-structures-by-name=Järjestä rakenteet nimen perusteella
 sort-structures-by-name-help=Aseta tämä todeksi näyttääksesi rakenteet nimen mukaan nousevasti kun web-sisältöä lisätään. Muussa tapauksessa rakenteet lajitellaan tunnisteen perusteella. Tämän ominaisuuden käyttöönotto voi heikentää suorituskykyä riippuen rakenteiden määrästä, koska lajittelu tehdään muistissa.
+sorting=Sorting (Automatic Copy)
 sound-settings=Ääniasetukset
 source=Lähdekoodi
 source-address=Lähdeosoite
@@ -14190,6 +14195,7 @@ star-off=Tähti pois päältä
 stars=Tähdet
 start=Aloita
 start-a-new-workflow=Aloita uusi työnkulku
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Alkupäivämäärä
 start-free-trial=Aloita Ilmainen Kokeilu
 start-from=Aloita kohdasta
@@ -14967,6 +14973,7 @@ the-google-client-id-is-invalid=Syötä kelvollinen Google-asiakastunnus.
 the-google-client-secret-is-invalid=Syötä kelvollinen Googlen asiakkaan salasana.
 the-google-places-api-key-is-not-set=Google Placesin API-avainta ei ole määritetty.
 the-header-search-bar-configuration-takes-precedence=Käytöstä poistetuille kentille sivun ylätunnisteen Hakupalkin määritys on etusijalla.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Tunnus perustuu nimikenttään.
 the-id-you-entered-is-reserved-x=Antamasi ID on varattu: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identiteetin tarjoajan rooli on poistettu käytöstä. Se voidaan ottaa uudelleen käyttöön Järjestelmän asetuksista.
@@ -15448,6 +15455,7 @@ there-are-no-collection-providers=Kokoelman tarjoajia ei ole.
 there-are-no-collection-usages=Kokoelman käyttöjä ei ole.
 there-are-no-collections=Kokoelmia ei ole.
 there-are-no-collections-yet=Kokoelmia ei vielä ole.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Kommentteja ei vielä ole.
 there-are-no-compatible-object-fields-to-map=Yhteensopivia objektikenttiä ei ole kartoitettavana.
 there-are-no-completed-instances=Ei ole valmistuneita julkaisupyyntöjä.
