--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -4621,6 +4621,7 @@ default-segment-name=N'importe qui
 default-settings-for-all-instances=Paramètres par défaut pour toutes les instances
 default-shipping=Livraison par défaut
 default-site-roles-assignment-help=Sélectionner les rôles que les nouveaux membres du site auront par défaut.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Groupe de spécifications par défaut
 default-style-book=Livre de styles par défaut
 default-tab=Étiquette de défaut
@@ -5314,6 +5315,7 @@ edit-controls=Mode édition
 edit-conversion-draft=Modifier le brouillon de conversion
 edit-coupon=Modifier le bon de réduction
 edit-current-assignee=Modifier l'affecté actuel
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Modifier les valeurs par défaut
 edit-description=Modifier la description
 edit-discount-rule=Éditer la règle de promotion
@@ -9741,6 +9743,7 @@ new-custom-field=Nouveau champ fait sur commande
 new-custom-object=Nouvel objet personnalisé
 new-data-export=Nouvelle exportation de données
 new-data-source=Nouvelle source de données
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nouvelle Définition
 new-device-family=Nouvelle famille de périphérique
 new-digital-signature-envelope=Nouvelle enveloppe de signature numérique
@@ -9928,6 +9931,7 @@ no-data-migration-processes-are-available=Aucun procédé de transfert de donné
 no-data-providers-were-found=Aucun fournisseur de données n'a été trouvée.
 no-declined-invites=Aucune invitation déclinée.
 no-default-display-page-template=Pas de modèle de page d'affichage par défaut
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Aucune définition n'a été trouvée.
 no-delivery-terms=Aucune condition de livraison
 no-description=Pas de description
@@ -14052,6 +14056,7 @@ sort-display-context-help=Accédez aux données contenues dans l'objet SortDispl
 sort-portlet-instance-configuration-name=Trier
 sort-structures-by-name=Trier les structures par nom
 sort-structures-by-name-help=Réglez ce paramètre sur vrai pour afficher les structures triées par nom croissant quand du contenu web est ajouté. Sinon, les structures seront triées par identificateur. Activer cette propriété peut réduire les performances en fonction du nombre de ddmStructures existantes depuis le lancement du tri dans la mémoire.
+sorting=Sorting (Automatic Copy)
 sound-settings=Paramètres sonores
 source=Source
 source-address=Adresse De la Source
@@ -14193,6 +14198,7 @@ star-off=Supprimer la notation
 stars=étoiles
 start=Début
 start-a-new-workflow=Commencer un nouveau workflow
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Date de début
 start-free-trial=Commencer l'essai gratuit
 start-from=Commencer à partir de
@@ -14971,6 +14977,7 @@ the-google-client-id-is-invalid=Veuillez entrer un identifiant Google valide.
 the-google-client-secret-is-invalid=Veuillez entrer une question secrète du client Google valide.
 the-google-places-api-key-is-not-set=La clé de l'API Google Places n'est pas définie.
 the-header-search-bar-configuration-takes-precedence=Pour les champs désactivés, la configuration de la barre de recherche de l'en-tête de page est prioritaire.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=L'identifiant se base sur le nom du champ.
 the-id-you-entered-is-reserved-x=L'ID que vous avez saisi est réservé : {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Le rôle de fournisseur d'identité a été désactivé. Vous pouvez me réactiver depuis les Paramètres système.
@@ -15452,6 +15459,7 @@ there-are-no-collection-providers=Il n'y a aucun fournisseur de collections.
 there-are-no-collection-usages=Il n'y a aucune utilisation de collection.
 there-are-no-collections=Il n'y a pas de collection.
 there-are-no-collections-yet=Il n'y a pas encore de collection.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Il n'y a pas encore de commentaire.
 there-are-no-compatible-object-fields-to-map=Il n'y a aucun champ d'objet compatible à cartographier.
 there-are-no-completed-instances=Il n'y a aucune demande réalisée de publication.
