--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -4621,6 +4621,7 @@ default-segment-name=siapa saja (Automatic Translation)
 default-settings-for-all-instances=Pengaturan Default untuk Semua Instans (Automatic Translation)
 default-shipping=Pengiriman Default (Automatic Translation)
 default-site-roles-assignment-help=Pilih peran yang akan dilakukan anggota situs yang baru ditetapkan. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Grup Spesifikasi Asali (Automatic Translation)
 default-style-book=Buku gaya default (Automatic Translation)
 default-tab=Standar Tab
@@ -5314,6 +5315,7 @@ edit-controls=Edit Kontrol
 edit-conversion-draft=Edit Draf Konversi (Automatic Translation)
 edit-coupon=Mengedit kupon
 edit-current-assignee=Edit Tugas Saat Ini (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Gunakan Nilai Default
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Edit Aturan Diskon (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Field kustom baru
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Ekspor Data Baru (Automatic Translation)
 new-data-source=Sumber Data Baru (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Definisi Baru (Automatic Translation)
 new-device-family=Tambah Aturan Kelompok
 new-digital-signature-envelope=Amplop Tanda Tangan Digital Baru (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Tidak ada proses migrasi data yang ter
 no-data-providers-were-found=Tidak ada penyedia data yang ditemukan. (Automatic Translation)
 no-declined-invites=Tidak ada menurun mengundang.
 no-default-display-page-template=Tidak Ada Templat Halaman Tampilan Default (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Tidak ada definisi yang ditemukan.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Akses data yang terkandung dalam objek SortDisplayCont
 sort-portlet-instance-configuration-name=jenis (Automatic Translation)
 sort-structures-by-name=Urutkan Struktur menurut Nama (Automatic Translation)
 sort-structures-by-name-help=Atur ini ke true untuk memperlihatkan struktur yang diurutkan menurut nama naik ketika menambahkan konten web. Jika tidak, struktur akan diurutkan menurut pengidentifikasi. Mengaktifkan properti ini dapat menurunkan kinerja tergantung pada jumlah ddmStructures yang ada karena penyortiran dilakukan dalam memori. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Pengaturan suara
 source=Sumber
 source-address=Alamat Source
@@ -14191,6 +14196,7 @@ star-off=Bintang Lepas
 stars=Bintang
 start=Memulai
 start-a-new-workflow=Memulai Workflow Baru
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Tanggal Mulai
 start-free-trial=Mulai Uji Coba Gratis (Automatic Translation)
 start-from=Memulai dari
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Masukkan ID klien Google yang valid. (Automatic 
 the-google-client-secret-is-invalid=Masukkan rahasia klien Google yang valid. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Untuk bidang yang dinonaktifkan, konfigurasi Bilah Pencarian header halaman lebih diutamakan. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID didasarkan pada bidang nama. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Peran penyedia identitas telah dinonaktifkan. Ini dapat diaktifkan kembali di Pengaturan Sistem. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Tidak ada penyedia koleksi. (Automatic Transla
 there-are-no-collection-usages=Tidak ada penggunaan koleksi. (Automatic Translation)
 there-are-no-collections=Tidak ada koleksi. (Automatic Translation)
 there-are-no-collections-yet=Belum ada koleksi. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Belum ada komentar. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Tidak ada selesai publikasi diminta oleh saya.
