--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -4620,6 +4620,7 @@ default-segment-name=chiunque (Automatic Translation)
 default-settings-for-all-instances=Impostazioni Predefinite per tutte le Istanze
 default-shipping=Spedizione predefinita (Automatic Translation)
 default-site-roles-assignment-help=Seleziona i ruoli che avranno i nuovi membri assegnati al sito.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Gruppo di specifiche predefinito (Automatic Translation)
 default-style-book=Libro di stile predefinito (Automatic Translation)
 default-tab=Tab Predefinito
@@ -5313,6 +5314,7 @@ edit-controls=Mostra/Nascondi Controlli
 edit-conversion-draft=Modifica bozza di conversione (Automatic Translation)
 edit-coupon=Modifica Coupon
 edit-current-assignee=Modifica assegnatario corrente (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Modifica Valori Predefiniti
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Modifica regola sconto (Automatic Translation)
@@ -9740,6 +9742,7 @@ new-custom-field=Nuovo Campo Personalizzato
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Nuova esportazione dati
 new-data-source=Nuova origine dati (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nuova definizione (Automatic Translation)
 new-device-family=Aggiungi Famiglia Dispositivo
 new-digital-signature-envelope=Nuova busta firma digitale (Automatic Translation)
@@ -9927,6 +9930,7 @@ no-data-migration-processes-are-available=Non ci sono processi di espansione di 
 no-data-providers-were-found=Nessun provider dati trovato.
 no-declined-invites=Nessun invito declinato.
 no-default-display-page-template=Nessun modello di pagina di visualizzazione predefinito (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Nessuna definizione trovata.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14051,6 +14055,7 @@ sort-display-context-help=Accedere ai dati contenuti nell'oggetto SortDisplayCon
 sort-portlet-instance-configuration-name=sorta (Automatic Translation)
 sort-structures-by-name=Ordinare le strutture per nome (Automatic Translation)
 sort-structures-by-name-help=Impostare questa impostazione su true per visualizzare le strutture ordinate in base al nome crescente quando si aggiunge un contenuto Web. In caso contrario, le strutture verranno ordinate in base all'identificatore. L'attivazione di questa proprietà può ridurre le prestazioni a seconda del numero di ddmStructures esistenti poiché l'ordinamento viene eseguito in memoria. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Impostazioni Audio
 source=Sorgente
 source-address=Indirizzo di Origine
@@ -14192,6 +14197,7 @@ star-off=Disattiva Stella
 stars=Stelle
 start=Inizio
 start-a-new-workflow=Avvia un Nuovo Workflow
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Data di Inizio
 start-free-trial=Inizia il Periodo di Prova
 start-from=Inizia Da
@@ -14970,6 +14976,7 @@ the-google-client-id-is-invalid=Inserisci un Google Client Id valido.
 the-google-client-secret-is-invalid=Inserisci una password per Google Client valida.
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Per i campi disabilitati, la configurazione della barra di ricerca dell'intestazione di pagina ha la precedenza. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=L'ID è basato sul campo del nome.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Il ruolo del provider di identità è stato disabilitato. Può essere riati abilitato in Impostazioni di sistema. (Automatic Translation)
@@ -15451,6 +15458,7 @@ there-are-no-collection-providers=Non sono disponibili provider di raccolta. (Au
 there-are-no-collection-usages=Non ci sono utilizzi della raccolta. (Automatic Translation)
 there-are-no-collections=Nessuna raccolta presente.
 there-are-no-collections-yet=Nessuna raccolta presente.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Non ci sono ancora commenti. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Nessuna richiesta di pubblicazione completata.
