--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Kas nors (Automatic Translation)
 default-settings-for-all-instances=Numatytieji visų egzempliorių parametrai (Automatic Translation)
 default-shipping=Numatytasis pristatymas (Automatic Translation)
 default-site-roles-assignment-help=Pasirinkite vaidmenis, kuriuos turės naujai priskirti svetainės nariai. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Numatytoji specifikacijų grupė (Automatic Translation)
 default-style-book=Numatytoji stiliaus knyga (Automatic Translation)
 default-tab=Numatytasis skirtukas (Automatic Translation)
@@ -5314,6 +5315,7 @@ edit-controls=Redaguoti valdiklius (Automatic Translation)
 edit-conversion-draft=Redaguoti konvertavimo juodraštį (Automatic Translation)
 edit-coupon=Redaguoti kuponą (Automatic Translation)
 edit-current-assignee=Redaguoti dabartinį perėmėjų (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Redaguoti numatytąsias reikšmes (Automatic Translation)
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Redaguoti nuolaidos taisyklę (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Naujas pasirinktinis laukas (Automatic Translation)
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Naujų duomenų eksportavimas (Automatic Translation)
 new-data-source=Naujas duomenų šaltinis (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Naujas apibrėžimas (Automatic Translation)
 new-device-family=Nauja įrenginių šeima (Automatic Translation)
 new-digital-signature-envelope=Naujas skaitmeninio parašo vokas (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Duomenų perkėlimo procesų nėra. (A
 no-data-providers-were-found=Duomenų teikėjų nerasta. (Automatic Translation)
 no-declined-invites=Jokių atmestų kvietė. (Automatic Translation)
 no-default-display-page-template=Nėra numatytojo rodymo puslapio šablono (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Apibrėžimų nerasta. (Automatic Translation)
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Pasiekite duomenis, esančius sortDisplayContext objek
 sort-portlet-instance-configuration-name=rikiuoti (Automatic Translation)
 sort-structures-by-name=Rūšiuoti struktūras pagal pavadinimą (Automatic Translation)
 sort-structures-by-name-help=Nustatykite, kad tai būtų teisinga, kad būtų rodomos struktūros, surūšiuotos pagal didėjimo tvarka rodomą pavadinimą pridedant žiniatinklio turinį. Kitu atveju struktūros bus rūšiuojamos pagal identifikatorių. Įjungus šią ypatybę gali pablogėti našumas, atsižvelgiant į esamų ddmStructures skaičių, nes rūšiavimas atliekamas atmintyje. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Garso parametrai (Automatic Translation)
 source=Šaltinis (Automatic Translation)
 source-address=Šaltinio adresas (Automatic Translation)
@@ -14191,6 +14196,7 @@ star-off=Žvaigždė išjungta (Automatic Translation)
 stars=Žvaigždutės (Automatic Translation)
 start=Pradėti (Automatic Translation)
 start-a-new-workflow=Pradėti naują darbo eigą (Automatic Translation)
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Pradžios data (Automatic Translation)
 start-free-trial=Pradėti nemokamą bandomąją versiją (Automatic Translation)
 start-from=Pradėti nuo (Automatic Translation)
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Įveskite galiojantį "Google" kliento ID. (Auto
 the-google-client-secret-is-invalid=Įveskite galiojančią "Google" kliento paslaptį. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Išjungtų laukų pirmenybė teikiama puslapio antraštės ieškos juostos konfigūracijai. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID pagrįstas pavadinimo lauku. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Tapatybės teikėjo vaidmuo išjungtas. Jis gali būti iš naujo įjungtas sistemos parametruose. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Surinkimo paslaugų teikėjų nėra. (Automati
 there-are-no-collection-usages=Nėra rinkinio naudojimo. (Automatic Translation)
 there-are-no-collections=Rinkinių nėra. (Automatic Translation)
 there-are-no-collections-yet=Kolekcijų dar nėra. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Komentarų kol kas nėra. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Nėra baigtų publikavimo užklausų. (Automatic Translation)
