--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Sesiapa (Automatic Translation)
 default-settings-for-all-instances=Seting Lalai untuk Semua Tika (Automatic Translation)
 default-shipping=Penghantaran Lalai (Automatic Translation)
 default-site-roles-assignment-help=Pilih peranan yang akan ditugaskan oleh ahli tapak yang baru diperuntukkan. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Kumpulan Spesifikasi Lalai (Automatic Translation)
 default-style-book=Buku Gaya Lalai (Automatic Translation)
 default-tab=Tab Lalai (Automatic Translation)
@@ -5314,6 +5315,7 @@ edit-controls=Edit Kawalan (Automatic Translation)
 edit-conversion-draft=Draf Penukaran Edit (Automatic Translation)
 edit-coupon=Edit Kupon (Automatic Translation)
 edit-current-assignee=Edit Pemegang Serah Hak Semasa (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Edit Nilai Lalai (Automatic Translation)
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Edit Peraturan Diskaun (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Medan Tersuai Baru (Automatic Translation)
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Eksport Data Baru (Automatic Translation)
 new-data-source=Sumber Data Baru (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Definisi Baru (Automatic Translation)
 new-device-family=Keluarga Peranti Baru (Automatic Translation)
 new-digital-signature-envelope=Sampul Tandatangan Digital Baru (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Tiada proses pemindahan data tersedia.
 no-data-providers-were-found=Tiada pembekal data ditemui. (Automatic Translation)
 no-declined-invites=Tiada jemputan yang ditolak. (Automatic Translation)
 no-default-display-page-template=Tiada Templat Halaman Paparan Lalai (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Tiada definisi ditemui. (Automatic Translation)
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Akses data yang terkandung dalam objek SortDisplayCont
 sort-portlet-instance-configuration-name=Mengisih (Automatic Translation)
 sort-structures-by-name=Mengisih Struktur mengikut Nama (Automatic Translation)
 sort-structures-by-name-help=Setkan ini kepada benar untuk menunjukkan struktur yang disusun mengikut nama naik apabila menambah kandungan web. Jika tidak, struktur akan disusun mengikut pengecam. Membolehkan hartanah ini boleh merendahkan prestasi bergantung kepada bilangan ddmStructures sedia ada kerana pengisihan dilakukan dalam ingatan. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Pengesetan Bunyi (Automatic Translation)
 source=Sumber (Automatic Translation)
 source-address=Alamat Sumber (Automatic Translation)
@@ -14191,6 +14196,7 @@ star-off=Star Off (Automatic Translation)
 stars=Bintang (Automatic Translation)
 start=Mula (Automatic Translation)
 start-a-new-workflow=Mulakan Aliran Kerja Baru (Automatic Translation)
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Tarikh Mula (Automatic Translation)
 start-free-trial=Mulakan Percubaan Percuma (Automatic Translation)
 start-from=Mulakan Dari (Automatic Translation)
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Sila masukkan ID pelanggan Google yang sah. (Aut
 the-google-client-secret-is-invalid=Sila masukkan rahsia pelanggan Google yang sah. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Untuk medan kurang upaya, konfigurasi Bar Carian pengepala halaman mengambil keutamaan. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID adalah berdasarkan medan nama. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Peranan pembekal identiti telah dinyahdayakan. Ia boleh didayakan semula dalam Seting Sistem. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Tiada pembekal koleksi. (Automatic Translation
 there-are-no-collection-usages=Tiada penggunaan koleksi. (Automatic Translation)
 there-are-no-collections=Tiada koleksi. (Automatic Translation)
 there-are-no-collections-yet=Tiada koleksi lagi. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Tiada komen lagi. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Tiada permintaan penerbitan yang lengkap. (Automatic Translation)
