--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -4621,6 +4621,7 @@ default-segment-name=noen (Automatic Translation)
 default-settings-for-all-instances=Standardinnstillinger for alle instanser
 default-shipping=Standard frakt (Automatic Translation)
 default-site-roles-assignment-help=Velg rollen som nylig tilegnede nettstedsmedlemmer skal ha.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Standard spesifikasjonsgruppe (Automatic Translation)
 default-style-book=Standard stilbok (Automatic Translation)
 default-tab=Standardfane
@@ -5314,6 +5315,7 @@ edit-controls=Rediger kontrollere
 edit-conversion-draft=Rediger konverteringsforhåndsvisning
 edit-coupon=Rediger kupong
 edit-current-assignee=Rediger gjeldende tilordning (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Rediger standardverdier
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Rediger rabattregel (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Nytt egendefinert felt
 new-custom-object=Nytt egendefinert objekt
 new-data-export=Ny dataeksport (Automatic Translation)
 new-data-source=Ny datakilde (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Ny definisjon (Automatic Translation)
 new-device-family=Ny enhetsfamilie
 new-digital-signature-envelope=Konvolutt - ny digital signatur (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Ingen datamigrasjonsprosesser er tilgj
 no-data-providers-were-found=Ingen datatilbydere ble funnet.
 no-declined-invites=Ingen avviste invitasjoner.
 no-default-display-page-template=Ingen standard visningssidemal
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Ingen definisjoner ble funnet.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Få tilgang til dataene i SortDisplayContext -objektet
 sort-portlet-instance-configuration-name=sortere (Automatic Translation)
 sort-structures-by-name=Sorter strukturer etter navn
 sort-structures-by-name-help=Set denne til sann for å vise strukturer sortert etter stigende navn når webinnhold legges til. Ellers vil strukturer vises etter identifikator. Aktivering av denne innstillingen kan negativt påvirke ytelsen avhengig av antall eksisterende ddmStrukturer da sortering gjøres i minnet.
+sorting=Sorting (Automatic Copy)
 sound-settings=Lydinnstillinger
 source=Kilde
 source-address=Kartadresse
@@ -14191,6 +14196,7 @@ star-off=Fjern stjerne
 stars=Stjerner
 start=Starte (Automatic Translation)
 start-a-new-workflow=Start en ny arbeidsflyt
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Startdato
 start-free-trial=Start gratis prøveperiode
 start-from=Start fra
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Angi en gyldig Google-klient-ID. (Automatic Tran
 the-google-client-secret-is-invalid=Skriv inn en gyldig Google-klienthemmelighet. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For deaktiverte felt har konfigurasjonen av søkefeltet for sideoverskriften forrang. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID er basert på navnefeltet.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identitetsleverandørrollen er deaktivert. Den kan aktiveres på nytt i Systeminnstillinger. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Det finnes ingen samlingtilbydere.
 there-are-no-collection-usages=Det finnes ingen bruk av samlinger.
 there-are-no-collections=Det finnes ingen samlinger. (Automatic Translation)
 there-are-no-collections-yet=Det finnes ingen samlinger enda.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Det finnes ingen kommentarer enda.
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Det er ingen fullførte publikasjonsanmodninger.
