--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Iedereen
 default-settings-for-all-instances=Standaardinstellingen voor alle gevallen
 default-shipping=Standaard verzending
 default-site-roles-assignment-help=Selecteer de rollen die de nieuwe siteleden krijgen.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Standaard specificatiegroep
 default-style-book=Standaard stijlboek
 default-tab=Standaardtabblad
@@ -5314,6 +5315,7 @@ edit-controls=Bedieningselementen bewerken
 edit-conversion-draft=Conversieontwerp bewerken
 edit-coupon=Kortingsbon bewerken
 edit-current-assignee=Huidige gevolmachtigde bewerken
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Standaardwaarden bewerken
 edit-description=Beschrijving bewerken
 edit-discount-rule=Kortingregel bewerken
@@ -9742,6 +9744,7 @@ new-custom-field=Nieuw extra veld
 new-custom-object=Nieuw aangepast object
 new-data-export=Nieuwe gegevensexport
 new-data-source=Nieuwe databron
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nieuwe Omschrijving
 new-device-family=Nieuwe apparatenfamilie
 new-digital-signature-envelope=Nieuwe envelop voor digitale handtekening
@@ -9929,6 +9932,7 @@ no-data-migration-processes-are-available=Er zijn geen datamigratieprocessen bes
 no-data-providers-were-found=Er zijn geen dataproviders gevonden.
 no-declined-invites=Er zijn geen afgewezen uitnodigingen.
 no-default-display-page-template=Geen standaard weergavepaginasjabloon
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Er zijn geen definities gevonden.
 no-delivery-terms=Geen leveringsvoorwaarden
 no-description=Geen beschrijving
@@ -14053,6 +14057,7 @@ sort-display-context-help=Krijg toegang tot de gegevens in het object SortDispla
 sort-portlet-instance-configuration-name=Sorteren
 sort-structures-by-name=Structuren sorteren op naam
 sort-structures-by-name-help=Stel dit in als 'waar' om structuren oplopend gesorteerd op naam weer te geven bij het toevoegen van webinhoud, anders worden structuren gesorteerd per ID. Inschakeling van deze eigenschap kan de prestaties negatief beïnvloeden naargelang van het bestaande aantal ddm-structuren, aangezien het sorteren gebeurt in het geheugen.
+sorting=Sorting (Automatic Copy)
 sound-settings=Geluidsinstellingen
 source=Bron
 source-address=Bronadres
@@ -14194,6 +14199,7 @@ star-off=Uitmarkeren
 stars=Sterren
 start=Starten
 start-a-new-workflow=Een nieuwe werkstroom beginnen
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Startdatum
 start-free-trial=Gratis proefperiode starten
 start-from=Starten vanaf
@@ -14972,6 +14978,7 @@ the-google-client-id-is-invalid=Voer een geldige Google client ID in.
 the-google-client-secret-is-invalid=Voer een geldige Google client secret in.
 the-google-places-api-key-is-not-set=De API-sleutel voor Google Places is niet ingesteld.
 the-header-search-bar-configuration-takes-precedence=Voor uitgeschakelde velden heeft de zoekbalkconfiguratie van de paginakoptekst voorrang.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Het Id is afgeleid van het naam veld.
 the-id-you-entered-is-reserved-x=De ingevoerde ID is voorbehouden: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=De ID-providerrol werd uitgeschakeld. Schakel de rol opnieuw in via de systeeminstellingen.
@@ -15453,6 +15460,7 @@ there-are-no-collection-providers=Er zijn geen collectieproviders.
 there-are-no-collection-usages=Er worden geen collecties gebruikt.
 there-are-no-collections=Er zijn geen verzamelingen.
 there-are-no-collections-yet=Er zijn geen collecties.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Er zijn nog geen reacties.
 there-are-no-compatible-object-fields-to-map=Er zijn geen compatibele objectvelden om toe te wijzen.
 there-are-no-completed-instances=Er zijn geen voltooide verzoeken.
