--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Ktoś (Automatic Translation)
 default-settings-for-all-instances=Ustawienia domyślne dla wszystkich wystąpień (Automatic Translation)
 default-shipping=Wysyłka domyślna (Automatic Translation)
 default-site-roles-assignment-help=Wskaż role, które otrzyma nowy uczestnik witryny.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Domyślna grupa specyfikacji (Automatic Translation)
 default-style-book=Domyślna księga stylów (Automatic Translation)
 default-tab=Domyślna zakładka
@@ -5314,6 +5315,7 @@ edit-controls=Kontrolki edycji
 edit-conversion-draft=Edytuj pobłam konwersacyjny (Automatic Translation)
 edit-coupon=Edytuj kupon
 edit-current-assignee=Edytowanie bieżącego cesjonariusza (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Edytuj wartości domyślne
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Edytuj regułę rabatu (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Nowe pole użytkownika
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Eksport nowych danych (Automatic Translation)
 new-data-source=Nowe źródło danych (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nowa definicja (Automatic Translation)
 new-device-family=Nowa klasa urządzeń
 new-digital-signature-envelope=Nowa koperta podpisu cyfrowego (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Nie ma dostępnych procesów migracji 
 no-data-providers-were-found=Nie znaleziono dostawców danych. (Automatic Translation)
 no-declined-invites=Brak odrzuconych zaproszeń.
 no-default-display-page-template=Brak domyślnego szablonu strony wyświetlania (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Nie znaleziono definicji.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Uzyskaj dostęp do danych zawartych w obiekcie SortDis
 sort-portlet-instance-configuration-name=Sortować
 sort-structures-by-name=Sortowanie struktur według nazwy (Automatic Translation)
 sort-structures-by-name-help=Ustaw to na true, aby pokazać struktury posortowane według rosnącej nazwy podczas dodawania zawartości sieci Web. W przeciwnym razie struktury będą sortowane według identyfikatora. Włączenie tej właściwości może obniżyć wydajność w zależności od liczby istniejących ddmStructures ponieważ sortowanie odbywa się w pamięci. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Ustawienia dźwięku
 source=Źródło
 source-address=Adres źródłowy
@@ -14191,6 +14196,7 @@ star-off=Gwiazdki nieaktywne
 stars=Gwiazdki
 start=Gwiazdki
 start-a-new-workflow=Rozpocznij nowy przepływ zadań
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Data rozpoczęcia
 start-free-trial=Rozpocznij bezpłatną wersję próbną (Automatic Translation)
 start-from=Rozpocznij od
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Wprowadź prawidłowy identyfikator klienta Goog
 the-google-client-secret-is-invalid=Wprowadź prawidłowy klucz tajny klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=W przypadku wyłączonych pól pierwszeństwo ma konfiguracja paska wyszukiwania nagłówka strony. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Identyfikator jest oparty na polu nazwy. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rola dostawcy tożsamości została wyłączona. Można go ponownie włączyć w ustawieniach systemu. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Nie ma dostawców kolekcji. (Automatic Transla
 there-are-no-collection-usages=Nie ma żadnych użycia kolekcji. (Automatic Translation)
 there-are-no-collections=Nie ma żadnych kolekcji. (Automatic Translation)
 there-are-no-collections-yet=Nie ma jeszcze żadnych kolekcji. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Nie ma jeszcze żadnych komentarzy. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Brak ukończonych poleceń publikacji.
