--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Qualquer Um
 default-settings-for-all-instances=Configurações Padrão para Todas as Instâncias
 default-shipping=Remessa padrão
 default-site-roles-assignment-help=Selecione os funções que o os membros recém-associados ao site terão.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Grupo de especificação padrão
 default-style-book=Livro de estilo padrão
 default-tab=Tabulação padrão
@@ -5314,6 +5315,7 @@ edit-controls=Editar Controles
 edit-conversion-draft=Editar rascunho de conversão
 edit-coupon=Editar Cupom
 edit-current-assignee=Editar Responsável Atual
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Editar Valores Padrão
 edit-description=Editar descrição
 edit-discount-rule=Editar regra de desconto
@@ -9739,6 +9741,7 @@ new-custom-field=Novo Campo Personalizado
 new-custom-object=Novo Objeto Personalizado
 new-data-export=Exportar dados novos
 new-data-source=Novos dados da Fonte
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nova definição
 new-device-family=Nova família de dispositivos
 new-digital-signature-envelope=Novo envelope de assinatura digital
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Nenhum processo da migração de dados
 no-data-providers-were-found=Nenhum provedor de dados foi encontrado.
 no-declined-invites=Nenhum convite recusado.
 no-default-display-page-template=Nenhum Modelo de Página de Exibição Padrão
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Não foram encontradas definições.
 no-delivery-terms=Nenhum termo de entrega
 no-description=Nenhuma descrição
@@ -14050,6 +14054,7 @@ sort-display-context-help=Acessar aos dados contidos no objeto SortDisplayContex
 sort-portlet-instance-configuration-name=Ordenar
 sort-structures-by-name=Classificar estruturas por nome
 sort-structures-by-name-help=Defina como verdadeiro para que as estruturas sejam exibidas classificadas com os nomes em ordem crescente quando estiver adicionando Conteúdo de Web. Caso contrário, as estruturas serão classificadas pelo identificador. Ativar esta propriedade pode diminuir o desempenho dependendo do número de estrutura de mapeamento de dados dinâmicos existentes já que a classificação é realizada na memória.
+sorting=Sorting (Automatic Copy)
 sound-settings=Configurações de som
 source=Fonte
 source-address=Endereço da fonte
@@ -14191,6 +14196,7 @@ star-off=Estrela desligada
 stars=Estrelas
 start=Iniciar
 start-a-new-workflow=Iniciar um Novo Fluxo de Trabalho
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Data de Início
 start-free-trial=Iniciar Teste Grátis
 start-from=Iniciar de
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Por favor, insira uma ID válida de cliente Goog
 the-google-client-secret-is-invalid=Por favor, insira um segredo válido de cliente Google.
 the-google-places-api-key-is-not-set=A chave API do Google Places não foi definida.
 the-header-search-bar-configuration-takes-precedence=Para campos desabilitados, a configuração da Barra de busca do cabeçalho da página tem precedente.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=O ID é baseado no campo nome.
 the-id-you-entered-is-reserved-x=O ID inserido está reservado: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=A função de provedor de identidade foi desativada. Pode ser habilitada novamente nas Configurações de Sistema.
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Não existem fornecedores de coleção.
 there-are-no-collection-usages=Não existem usos da coleções.
 there-are-no-collections=Não há coleções.
 there-are-no-collections-yet=Ainda não há coleções.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Ainda não há nenhum comentário.
 there-are-no-compatible-object-fields-to-map=Não há campos de objeto compatíveis para serem mapeados.
 there-are-no-completed-instances=Não há solicitações de publicação concluídas.
