--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -4621,6 +4621,7 @@ default-segment-name=alguém (Automatic Translation)
 default-settings-for-all-instances=Configuração por Omissão para Todas as Instâncias
 default-shipping=Envio padrão (Automatic Translation)
 default-site-roles-assignment-help=Selecione os roles que os membros recém-associados ao site terão.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Grupo de especificação padrão (Automatic Translation)
 default-style-book=Default Style Book (Automatic Copy)
 default-tab=Separador por Omissão
@@ -5314,6 +5315,7 @@ edit-controls=Editar Controlos
 edit-conversion-draft=Editar rascunho de conversão (Automatic Translation)
 edit-coupon=Editar Cupão
 edit-current-assignee=Editar assignee atual (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Editar Valores por Omissão
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Editar regra de desconto (Automatic Translation)
@@ -9741,6 +9743,7 @@ new-custom-field=Novo Campo Personalizado
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Exportação de novos dados (Automatic Translation)
 new-data-source=Nova fonte de dados (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nova Definição (Automatic Translation)
 new-device-family=Nova família de dispositivos
 new-digital-signature-envelope=Novo envelope de assinatura digital (Automatic Translation)
@@ -9928,6 +9931,7 @@ no-data-migration-processes-are-available=Nenhum processo da migração de dados
 no-data-providers-were-found=Não foram encontrados fornecedores de dados.
 no-declined-invites=Nenhum convite recusado.
 no-default-display-page-template=Sem modelo de página de exibição padrão (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Nenhuma definição foi encontrada.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14052,6 +14056,7 @@ sort-display-context-help=Acesse os dados contidos no objeto SortDisplayContext 
 sort-portlet-instance-configuration-name=ordenar (Automatic Translation)
 sort-structures-by-name=Classificar estruturas por nome (Automatic Translation)
 sort-structures-by-name-help=Defina isso como true para mostrar estruturas classificadas pelo nome ascendente ao adicionar um conteúdo web. Caso contrário, as estruturas serão classificadas pelo identificador. Habilitar esta propriedade pode degradar o desempenho dependendo do número de ddmEstruturas existentes, uma vez que a classificação é feita na memória. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Definições Áudio
 source=Fonte
 source-address=Endereço da Fonte
@@ -14193,6 +14198,7 @@ star-off=Estrela Desligada
 stars=Estrelas
 start=Iniciar
 start-a-new-workflow=Iniciar um Novo Fluxo de Trabalho
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Data de Início
 start-free-trial=Iniciar teste gratuito (Automatic Translation)
 start-from=Iniciar Em
@@ -14971,6 +14977,7 @@ the-google-client-id-is-invalid=Por favor, introduza um ID de cliente Google vá
 the-google-client-secret-is-invalid=Por favor, introduza um segredo de cliente Google válido.
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Para campos desativados, a configuração de barra de pesquisa do cabeçalho da página tem precedência. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=O ID é baseado no campo nome.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=O papel de provedor de identidade foi desativado. Ele pode ser reativado nas configurações do sistema. (Automatic Translation)
@@ -15452,6 +15459,7 @@ there-are-no-collection-providers=Não há provedores de coleta. (Automatic Tran
 there-are-no-collection-usages=Não há uso de coleta. (Automatic Translation)
 there-are-no-collections=Não há coleções. (Automatic Translation)
 there-are-no-collections-yet=Ainda não há coleções. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Ainda não há comentários. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Não há instâncias concluídas.
