--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -4621,6 +4621,7 @@ default-segment-name=oricine (Automatic Translation)
 default-settings-for-all-instances=Setări implicite pentru toate instanțele (Automatic Translation)
 default-shipping=Livrare implicită (Automatic Translation)
 default-site-roles-assignment-help=Selectați rolurile pe care le vor avea membrii site-ului nou atribuiți. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Grup de specificații implicit (Automatic Translation)
 default-style-book=Carte de stiluri implicită (Automatic Translation)
 default-tab=Tab Implicit
@@ -5314,6 +5315,7 @@ edit-controls=Editare controale (Automatic Translation)
 edit-conversion-draft=Editare schiță de conversie (Automatic Translation)
 edit-coupon=Editează Cupon
 edit-current-assignee=Editare cesionar curent (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Foloseste Valori Implicite
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Editare regulă reducere (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Camp Editabil Nou
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Export de date noi (Automatic Translation)
 new-data-source=Sursă de date nouă (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Definiție nouă (Automatic Translation)
 new-device-family=Familie de dispozitive noi (Automatic Translation)
 new-digital-signature-envelope=Plic nou semnătură digitală (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Nu exista procese de migrare de date d
 no-data-providers-were-found=Nu s-au găsit furnizori de date. (Automatic Translation)
 no-declined-invites=Fără invitații refuzate. (Automatic Translation)
 no-default-display-page-template=Fără șablon implicit de pagină de afișare (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Nu a fost gasita nici o definitie.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Accesați datele conținute în obiectul SortDisplayCo
 sort-portlet-instance-configuration-name=fel (Automatic Translation)
 sort-structures-by-name=Sortare structuri după nume (Automatic Translation)
 sort-structures-by-name-help=Setați acest lucru la adevărat pentru a afișa structuri sortate după nume ascendent atunci când adăugați un conținut Web. În caz contrar, structurile vor fi sortate după identificator. Activarea acestei proprietăți poate degrada performanța în funcție de numărul de ddmStructures existente, deoarece sortarea se face în memorie. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Setari Sunet
 source=Sursa
 source-address=Adresa Sursa
@@ -14191,6 +14196,7 @@ star-off=Stea dezactivata
 stars=Stele
 start=Stele
 start-a-new-workflow=Porneste un Flux de Lucru Nou
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Porneste Data
 start-free-trial=Începeți încercarea gratuită (Automatic Translation)
 start-from=Porneste din
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Introduceți un ID de client Google valid. (Auto
 the-google-client-secret-is-invalid=Introduceți un secret de client Google valid. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Pentru câmpurile dezactivate, configurația barei de căutare a antetului paginii are prioritate. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID-ul se bazează pe câmpul nume. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rolul furnizorului de identitate a fost dezactivat. Poate fi reactivat în Setări sistem. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Nu există furnizori de colectare. (Automatic 
 there-are-no-collection-usages=Nu există utilizări de colectare. (Automatic Translation)
 there-are-no-collections=Nu există colecții. (Automatic Translation)
 there-are-no-collections-yet=Încă nu există colecții. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Nu există comentarii încă. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Nu sunt cereri de publicatii complete.
