--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -4621,6 +4621,7 @@ default-segment-name=niekto (Automatic Translation)
 default-settings-for-all-instances=Predvolené nastavenie pre všetky inštancie (Automatic Translation)
 default-shipping=Predvolené odosielanie (Automatic Translation)
 default-site-roles-assignment-help=Vyberte role, ktoré automaticky získajú novopridaní členovia sídla.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Predvolená skupina špecifikácií (Automatic Translation)
 default-style-book=Predvolená kniha štýlov (Automatic Translation)
 default-tab=Predvolená karta
@@ -5314,6 +5315,7 @@ edit-controls=Ovládacie prvky
 edit-conversion-draft=Upraviť koncept konverzie (Automatic Translation)
 edit-coupon=Upraviť kupón
 edit-current-assignee=Upraviť aktuálneho nadobúdateľa (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Upraviť predvolené hodnoty
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Upraviť pravidlo zľavy (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Nové vlastné pole
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Export nových údajov (Automatic Translation)
 new-data-source=Nový zdroj údajov (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nová definícia (Automatic Translation)
 new-device-family=Nová skupina zariadení
 new-digital-signature-envelope=Nová obálka digitálneho podpisu (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Nie sú k dispozícii žiadne migračn
 no-data-providers-were-found=Nenašli sa žiadni poskytovatelia údajov.
 no-declined-invites=Žiadne zamietnuté pozvánky.
 no-default-display-page-template=Žiadna predvolená šablóna zobrazenej strany (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Nenašla sa žiadna definícia.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Prístup k údajom obsiahnutým v objekte SortDisplayC
 sort-portlet-instance-configuration-name=triediť (Automatic Translation)
 sort-structures-by-name=Zoradenie štruktúr podľa názvu (Automatic Translation)
 sort-structures-by-name-help=Nastavte túto hodnotu na hodnotu true tak, aby sa pri pridávaní webového obsahu zobrazovali štruktúry zoradené podľa vzostupného názvu. V opačnom prípade budú štruktúry zoradené podľa identifikátora. Zapnutie tejto vlastnosti môže znížiť výkon v závislosti od počtu existujúcich ddmŠtruktúr, pretože zoradenie sa vykonáva v pamäti. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Zvukové nastavenia
 source=Zdroj
 source-address=Zdrojová adresa
@@ -14191,6 +14196,7 @@ star-off=Zrušiť hodnotenie
 stars=Hviezdičky
 start=Začiatok
 start-a-new-workflow=Spustiť nový tok práce
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Dátum začiatku
 start-free-trial=Spustiť bezplatnú skúšobnú verziu (Automatic Translation)
 start-from=Začiatok od
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Zadajte platný identifikátor klienta Google. (
 the-google-client-secret-is-invalid=Zadajte platné tajomstvo klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=V prípade zakázaných polí má prednosť konfigurácia panela vyhľadávania hlavičky stránky. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Identifikácia je založená na poli názvu. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rola poskytovateľa identity bola vypnutá. Je možné ho znova zapnúť v systémových nastaveniach. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Neexistujú žiadni poskytovatelia zhromažďo
 there-are-no-collection-usages=Neexistujú žiadne aplikácie kolekcie. (Automatic Translation)
 there-are-no-collections=Neexistujú žiadne zbierky. (Automatic Translation)
 there-are-no-collections-yet=Zatiaľ nie sú žiadne zbierky. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Zatiaľ nie sú žiadne pripomienky. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Nie sú ukončené žiadne požiadavky na publikovanie.
