--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -4621,6 +4621,7 @@ default-segment-name=kdorkoli (Automatic Translation)
 default-settings-for-all-instances=Privzete nastavitve za vse primerke (Automatic Translation)
 default-shipping=Privzeta dobava (Automatic Translation)
 default-site-roles-assignment-help=Izberite vloge, ki jih bodo imeli novo dodeljeni člani mesta. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Privzeta skupina specifikacij (Automatic Translation)
 default-style-book=Privzeta slogovna knjiga (Automatic Translation)
 default-tab=Privzeti zavihek
@@ -5314,6 +5315,7 @@ edit-controls=Uredi kontrolniki (Automatic Translation)
 edit-conversion-draft=Uredi osnutek konverzije (Automatic Translation)
 edit-coupon=Uredi kupon
 edit-current-assignee=Uredi trenutnega dodeljenega (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Uporabi prednastavljene vrednosti.
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Uredi pravilo popusta (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Dodaj lastnost
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Izvoz novih podatkov (Automatic Translation)
 new-data-source=Nov vir podatkov (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Nova definicija (Automatic Translation)
 new-device-family=Nova družina naprav (Automatic Translation)
 new-digital-signature-envelope=Nova digitalna ovojnica za podpis (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Trenutno ni na voljo nobenih procesov 
 no-data-providers-were-found=Ponudnikov podatkov ni bilo mogoče najti. (Automatic Translation)
 no-declined-invites=Nobenih zavrnjenih povabil. (Automatic Translation)
 no-default-display-page-template=Ni privzete predloge strani za prikaz (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Ni definicij.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Dostop do podatkov iz predmeta SortDisplayContext (na 
 sort-portlet-instance-configuration-name=razvrstiti (Automatic Translation)
 sort-structures-by-name=Razvrsti strukture po imenu (Automatic Translation)
 sort-structures-by-name-help=To nastavite tako, da bo prikaz struktur, razvrščenih po naraščajočem imenu, pri dodajanju spletne vsebine. V nasprotnem primeru bodo strukture razvrščene po identifikatorju. Omogočanje te lastnosti lahko poslabša učinkovitost delovanja glede na število obstoječih ddmstruktur, saj je razvrščanje opravljeno v pomnilniku. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Nastavitve za zvok
 source=Vir
 source-address=Naslov izvorne kode
@@ -14191,6 +14196,7 @@ star-off=Izklop zvezd (Automatic Translation)
 stars=Zvezde
 start=Začetek
 start-a-new-workflow=Začni nov potek dela
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Datum začetka
 start-free-trial=Zaženi brezplačno preskusno različico (Automatic Translation)
 start-from=Začni od
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Vnesite veljaven ID Googlovega odjemalca. (Autom
 the-google-client-secret-is-invalid=Vnesite veljavno skrivnost Googlovega odjemalca. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Za onemogočana polja ima prednost konfiguracija vrstice za iskanje glave strani. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID temelji na polju imena. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Vloga ponudnika identitete je bila onemogotena. V sistemskih nastavitvah ga je mogoče ponovno omogočiti. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Ponudnikov zbiranja ni. (Automatic Translation
 there-are-no-collection-usages=Nobenih izterjav ni. (Automatic Translation)
 there-are-no-collections=Ni zbirk. (Automatic Translation)
 there-are-no-collections-yet=Zbirk še ni. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Komentarjev še ni. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Ni izpolnjenih zahtev za objavo. (Automatic Translation)
