--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Alla
 default-settings-for-all-instances=Standardinställningar för alla instanser
 default-shipping=Standardleverans
 default-site-roles-assignment-help=Välj de roller som de nyligen tilldelade webbplatsmedlemmarna kommer att ha.
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Standardspecifikationsgrupp
 default-style-book=Förinställd stilbok
 default-tab=Standardflik
@@ -5314,6 +5315,7 @@ edit-controls=Redigeringskontroller
 edit-conversion-draft=Redigera konverteringsutkast
 edit-coupon=Redigera kupong
 edit-current-assignee=Redigera nuvarande tilldelad person
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Ändra standardvärden
 edit-description=Redigera beskrivning
 edit-discount-rule=Redigera rabattregel
@@ -9739,6 +9741,7 @@ new-custom-field=Skapa eget fält
 new-custom-object=Nytt anpassat objekt
 new-data-export=Ny dataexport
 new-data-source=Ny datakälla
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Ny definition
 new-device-family=Lägg till regelgrupp
 new-digital-signature-envelope=Kuvert för ny digital underskrift
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Procedurer för att konvertera data sa
 no-data-providers-were-found=Ingen dataprovider hittades.
 no-declined-invites=Inga avböjda inbjudningar.
 no-default-display-page-template=Ingen förvald mall för visningssida
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Inga definitioner hittades.
 no-delivery-terms=Inga leveransvillkor
 no-description=Ingen beskrivning
@@ -14050,6 +14054,7 @@ sort-display-context-help=Öppna data som finns i objektet SortDisplayContext (t
 sort-portlet-instance-configuration-name=Sortera
 sort-structures-by-name=Sortera strukturer efter namn
 sort-structures-by-name-help=Ange detta som sant för att visa strukturer sorterade i stigande ordning när webbinnehåll läggs till. Annars kommer strukturer att sorteras efter identifierare. Aktivering av den här egenskapen kan degradera prestandan beroende på antalet befintliga ddm-strukturer eftersom sortering görs i minnet.
+sorting=Sorting (Automatic Copy)
 sound-settings=Ljudinställningar
 source=Källa
 source-address=Kartadress
@@ -14191,6 +14196,7 @@ star-off=Stjärna av
 stars=Stjärnor
 start=Stjärnor
 start-a-new-workflow=Starta nytt arbetsflöde
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Startdatum
 start-free-trial=Starta kostnadsfri provversion
 start-from=Starta från
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Ange ett giltigt klient-ID för Google.
 the-google-client-secret-is-invalid=Ange en giltig klienthemlighet för Google.
 the-google-places-api-key-is-not-set=API-nyckel för Google Places har inte angetts.
 the-header-search-bar-configuration-takes-precedence=För inaktiverade fält används Konfiguration av sökfält i sidhuvudet.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID är baserat på fältets namn.
 the-id-you-entered-is-reserved-x=ID:t du angav är reserverat: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Roll för identitetsleverantör har inaktiverats. Den kan aktiveras igen i systeminställningarna.
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Det finns inga samlingsleverantörer.
 there-are-no-collection-usages=Det finns ingen samlingsanvändning.
 there-are-no-collections=Det finns inga samlingar.
 there-are-no-collections-yet=Det finns inga samlingar ännu.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Det finns inga kommentarer än.
 there-are-no-compatible-object-fields-to-map=Det finns inga kompatibla objektfält att mappa.
 there-are-no-completed-instances=Det finns inga slutförda publiceringsbegäranden.
