--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -4621,6 +4621,7 @@ default-segment-name=biri (Automatic Translation)
 default-settings-for-all-instances=Tüm Örnekler için Varsayılan Ayarlar (Automatic Translation)
 default-shipping=Varsayılan Sevkiyat (Automatic Translation)
 default-site-roles-assignment-help=Yeni atanan site üyelerinin sahip olacağı rolleri seçin. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Varsayılan Belirtim Grubu (Automatic Translation)
 default-style-book=Varsayılan Stil Kitap (Automatic Translation)
 default-tab=Varsayılan Tab
@@ -5314,6 +5315,7 @@ edit-controls=Denetimleri Düzenle (Automatic Translation)
 edit-conversion-draft=Dönüştürme Taslağını Düzenle (Automatic Translation)
 edit-coupon=Kupon Düzenle
 edit-current-assignee=Geçerli Atananı Düzenle (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Varsayılan Değerleri Kullan
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=İndirim Kuralını Düzenle (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Özellik Ekle
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Yeni Veri Verme (Automatic Translation)
 new-data-source=Yeni Veri Kaynağı (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Yeni Tanım (Automatic Translation)
 new-device-family=Yeni Cihaz Ailesi (Automatic Translation)
 new-digital-signature-envelope=Yeni Dijital İmza Zarfı (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Kullanılabilir veri taşıma işlemi 
 no-data-providers-were-found=Veri sağlayıcısı bulunamadı. (Automatic Translation)
 no-declined-invites=Reddedilen davet yok. (Automatic Translation)
 no-default-display-page-template=Varsayılan Görüntüleme Sayfası Şablonu Yok (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Hiç tanım bulunamadı.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=SortDisplayContext nesnesinde bulunan verilere erişin
 sort-portlet-instance-configuration-name=tür (Automatic Translation)
 sort-structures-by-name=Yapıları Ada Göre Sırala (Automatic Translation)
 sort-structures-by-name-help=Web içeriği eklerken artan ada göre sıralanmış yapıları göstermek için bunu true olarak ayarlayın. Aksi takdirde, yapılar tanımlayıcıya göre sıralanır. Bu özelliğin etkinleştirilmesi, bellekte sıralama yapıldığından varolan ddmStructures sayısına bağlı olarak performansı düşürebilir. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Ses Ayarları
 source=Kaynak
 source-address=Kaynak Adresi
@@ -14191,6 +14196,7 @@ star-off=Star Off(?)
 stars=Yıldızlar
 start=Başla
 start-a-new-workflow=Yeni İş Akışına Başla
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Başlangıç Tarihi
 start-free-trial=Ücretsiz Deneme Sürümünü Başlat (Automatic Translation)
 start-from=Buradan Başla:
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Lütfen geçerli bir Google istemci kimliği gir
 the-google-client-secret-is-invalid=Lütfen geçerli bir Google istemci sırrı girin. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Devre dışı bırakılan alanlar için, sayfa üstbilgisi Arama Çubuğu yapılandırması önceliklidir. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Kimlik, ad alanını temel alan bir kimliktir. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Kimlik sağlayıcı rolü devre dışı bırakıldı. Sistem Ayarları'nda yeniden etkinleştirilebilir. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Tahsilat sağlayıcısı yok. (Automatic Trans
 there-are-no-collection-usages=Koleksiyon kullanımı yok. (Automatic Translation)
 there-are-no-collections=Koleksiyon falan yok. (Automatic Translation)
 there-are-no-collections-yet=Henüz koleksiyon yok. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Henüz yorum yok. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Tamamlanmış yayın isteği yok. (Automatic Translation)
