--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Тих (Automatic Translation)
 default-settings-for-all-instances=Параметри за промовчанням для всіх екземплярів (Automatic Translation)
 default-shipping=Доставка за промовчанням (Automatic Translation)
 default-site-roles-assignment-help=Виберіть ролі, які будуть мати щойно призначені учасники сайту. (Automatic Translation)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Група специфікацій за промовчанням (Automatic Translation)
 default-style-book=Типова книга стилів (Automatic Translation)
 default-tab=Закладення по замовчуванню
@@ -5314,6 +5315,7 @@ edit-controls=Змінити елементи керування (Automatic Tran
 edit-conversion-draft=Змінити чернетку перетворення (Automatic Translation)
 edit-coupon=Змінити купон
 edit-current-assignee=Змінити поточного призначеного (Automatic Translation)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Використовувати значення по замовчуванню
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Змінити правило знижок (Automatic Translation)
@@ -9739,6 +9741,7 @@ new-custom-field=Добавити свій атрибут
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=Новий експорт даних (Automatic Translation)
 new-data-source=Нове джерело даних (Automatic Translation)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=Нове визначення (Automatic Translation)
 new-device-family=Створити сімейство пристроїв (Automatic Translation)
 new-digital-signature-envelope=Створити конверт цифрового підпису (Automatic Translation)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Немає доступних проц
 no-data-providers-were-found=Постачальників даних не знайдено. (Automatic Translation)
 no-declined-invites=Немає відхилених запрошень. (Automatic Translation)
 no-default-display-page-template=Немає шаблону відображуваної сторінки за промовчанням (Automatic Translation)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Означень процесів не знайдено.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Доступ до даних, що містяться 
 sort-portlet-instance-configuration-name=сортувати (Automatic Translation)
 sort-structures-by-name=Сортувати структури за іменем (Automatic Translation)
 sort-structures-by-name-help=Встановіть значення true, щоб під час додавання веб-вмісту було відсортовано структури за зростанням. Інакше структури будуть відсортовані за ідентифікатором. Увімкнення цієї властивості може погіршити продуктивність залежно від кількості наявних ddmStructures, оскільки сортування виконується в пам'яті. (Automatic Translation)
+sorting=Sorting (Automatic Copy)
 sound-settings=Налаштування звуку
 source=Джерело
 source-address=Початкова адреса
@@ -14191,6 +14196,7 @@ star-off=Зірочки вимкнено
 stars=Зірочки
 start=Почати
 start-a-new-workflow=Запустити новий робочий процес
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Дата початку
 start-free-trial=Почати безкоштовну пробну версію (Automatic Translation)
 start-from=Почати з
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Введіть припустимий ідент
 the-google-client-secret-is-invalid=Введіть дійсну таємницю клієнта Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Для вимкнених полів пріоритет має конфігурація панелі пошуку заголовка сторінки. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=Ідентифікатор засновано на полі імені. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Роль постачальника посвідчень вимкнуто. Його можна знову ввімкнути в системних параметрах. (Automatic Translation)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=Постачальників колекцій 
 there-are-no-collection-usages=Використання колекції не становить. (Automatic Translation)
 there-are-no-collections=Колекцій немає. (Automatic Translation)
 there-are-no-collections-yet=Колекцій ще немає. (Automatic Translation)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=Є немає коментарів ще. (Automatic Translation)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Немає завершених запитів на публікацію. (Automatic Translation)
