--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Calquera persoa
 default-settings-for-all-instances=Default Settings for All Instances (Automatic Copy)
 default-shipping=Default Shipping (Automatic Copy)
 default-site-roles-assignment-help=Select the roles that the newly assigned site members will have. (Automatic Copy)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Default Specification Group (Automatic Copy)
 default-style-book=Default Style Book (Automatic Copy)
 default-tab=Pestana por defecto
@@ -5314,6 +5315,7 @@ edit-controls=Mostrar controis de portlets
 edit-conversion-draft=Edit Conversion Draft (Automatic Copy)
 edit-coupon=Editar cupón
 edit-current-assignee=Edit Current Assignee (Automatic Copy)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Editar valores predeterminados
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Edit Discount Rule (Automatic Copy)
@@ -9739,6 +9741,7 @@ new-custom-field=Novo campo personalizado
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=New Data Export (Automatic Copy)
 new-data-source=New Data Source (Automatic Copy)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=New Definition (Automatic Copy)
 new-device-family=New Device Family (Automatic Copy)
 new-digital-signature-envelope=New Digital Signature Envelope (Automatic Copy)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=Non hai procesos de migración da info
 no-data-providers-were-found=No data providers were found. (Automatic Copy)
 no-declined-invites=Non hai invitacións rechazadas.
 no-default-display-page-template=No Default Display Page Template (Automatic Copy)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=Non se atopou ningunha definición.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Access the data contained in the SortDisplayContext ob
 sort-portlet-instance-configuration-name=Ordenar
 sort-structures-by-name=Sort Structures by Name (Automatic Copy)
 sort-structures-by-name-help=Set this to true to show structures sorted by ascending name when adding a web content. Otherwise, structures will be sorted by identifier. Enabling this property can degrade performance depending on number of existing ddmStructures since sorting is done in memory. (Automatic Copy)
+sorting=Sorting (Automatic Copy)
 sound-settings=Configuración de son
 source=Orixe
 source-address=Enderezo orixe
@@ -14191,6 +14196,7 @@ star-off=Estrelas apagadas
 stars=Estrelas
 start=Comezo
 start-a-new-workflow=Comezar un proceso de traballo novo
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Data de inicio
 start-free-trial=Start Free Trial (Automatic Copy)
 start-from=Empezar desde
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Please enter a valid Google client ID. (Automati
 the-google-client-secret-is-invalid=Please enter a valid Google client secret. (Automatic Copy)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For disabled fields, the page header Search Bar configuration takes precedence. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=O ID é baseado no campo nome.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=The identity provider role has been disabled. It can be re-enabled in System Settings. (Automatic Copy)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=There are no collection usages. (Automatic Copy)
 there-are-no-collections=There are no collections. (Automatic Copy)
 there-are-no-collections-yet=There are no collections yet. (Automatic Copy)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=There are no comments yet. (Automatic Copy)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=Non hai peticións de publicación completas.
