--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Anyone (Automatic Copy)
 default-settings-for-all-instances=Default Settings for All Instances (Automatic Copy)
 default-shipping=Default Shipping (Automatic Copy)
 default-site-roles-assignment-help=Select the roles that the newly assigned site members will have. (Automatic Copy)
+default-sort=Default Sort (Automatic Copy)
 default-specification-group=Default Specification Group (Automatic Copy)
 default-style-book=Default Style Book (Automatic Copy)
 default-tab=Default Tab (Automatic Copy)
@@ -5314,6 +5315,7 @@ edit-controls=Edit Controls (Automatic Copy)
 edit-conversion-draft=Edit Conversion Draft (Automatic Copy)
 edit-coupon=Edit Coupon (Automatic Copy)
 edit-current-assignee=Edit Current Assignee (Automatic Copy)
+edit-default-sort=Edit Default Sort (Automatic Copy)
 edit-default-values=Edit Default Values (Automatic Copy)
 edit-description=Edit Description (Automatic Copy)
 edit-discount-rule=Edit Discount Rule (Automatic Copy)
@@ -9739,6 +9741,7 @@ new-custom-field=New Custom Field (Automatic Copy)
 new-custom-object=New Custom Object (Automatic Copy)
 new-data-export=New Data Export (Automatic Copy)
 new-data-source=New Data Source (Automatic Copy)
+new-default-sort=New Default Sort (Automatic Copy)
 new-definition=New Definition (Automatic Copy)
 new-device-family=New Device Family (Automatic Copy)
 new-digital-signature-envelope=New Digital Signature Envelope (Automatic Copy)
@@ -9926,6 +9929,7 @@ no-data-migration-processes-are-available=No data migration processes are availa
 no-data-providers-were-found=No data providers were found. (Automatic Copy)
 no-declined-invites=No declined invites. (Automatic Copy)
 no-default-display-page-template=No Default Display Page Template (Automatic Copy)
+no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
 no-definitions-were-found=No definitions were found. (Automatic Copy)
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14050,6 +14054,7 @@ sort-display-context-help=Access the data contained in the SortDisplayContext ob
 sort-portlet-instance-configuration-name=Sort (Automatic Copy)
 sort-structures-by-name=Sort Structures by Name (Automatic Copy)
 sort-structures-by-name-help=Set this to true to show structures sorted by ascending name when adding a web content. Otherwise, structures will be sorted by identifier. Enabling this property can degrade performance depending on number of existing ddmStructures since sorting is done in memory. (Automatic Copy)
+sorting=Sorting (Automatic Copy)
 sound-settings=Sound Settings (Automatic Copy)
 source=Source (Automatic Copy)
 source-address=Source Address (Automatic Copy)
@@ -14191,6 +14196,7 @@ star-off=Star Off (Automatic Copy)
 stars=Stars (Automatic Copy)
 start=Start (Automatic Copy)
 start-a-new-workflow=Start a New Workflow (Automatic Copy)
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
 start-date=Start Date (Automatic Copy)
 start-free-trial=Start Free Trial (Automatic Copy)
 start-from=Start From (Automatic Copy)
@@ -14969,6 +14975,7 @@ the-google-client-id-is-invalid=Please enter a valid Google client ID. (Automati
 the-google-client-secret-is-invalid=Please enter a valid Google client secret. (Automatic Copy)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For disabled fields, the page header Search Bar configuration takes precedence. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
 the-id-is-based-on-the-name-field=The ID is based on the name field. (Automatic Copy)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=The identity provider role has been disabled. It can be re-enabled in System Settings. (Automatic Copy)
@@ -15450,6 +15457,7 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=There are no collection usages. (Automatic Copy)
 there-are-no-collections=There are no collections. (Automatic Copy)
 there-are-no-collections-yet=There are no collections yet. (Automatic Copy)
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
 there-are-no-comments-yet=There are no comments yet. (Automatic Copy)
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map. (Automatic Copy)
 there-are-no-completed-instances=There are no completed publication requests. (Automatic Copy)
